# v4l2-test

./: .gitignore  CMakeLists.txt  Makefile  main.c  mon-server.h  readme.md  sunxi_disp_ioctl.h  sunxi_tvd.c  video.c  video.h
images/allwinner_t3/: capture1.yuv  capture2.yuv  capture3.yuv  capture4.yuv  capture5.yuv
yuvtools/YUVPlayer/: key.reg  readme.md
